#pragma once

namespace wsb {
	namespace graphic {
		namespace vulkan {
			class QueueFamilies {

			};
		}
	}
}
