@startuml graphic

package graphic {
    interface ISurfaceHolder {
        + findQueueFamilies()
        + querySwapChainSupport()
    }
    interface IImageDrawTarget {
        + GetTargetImages()
    }

    class GraphicEngine {
    }
    class Instance {
        - VkInstance
    }
    class GraphicDevice {
    }
    class DebugTool {
        - VkDebugUtilsMessengerEXT
    }


    class PhysicalDevice {
        - VkPhysicalDevice
    }
    class LogicalDevice {
        - VkDevice
    }
    class GraphicRender {

    }
    class QueueFamilies {

    }


    class BufferMemoryArea {

    }
    class DescriptorPool {
        + VkDescriptorPool
    }
    class CommandPool {
        + VkCommandPool
    }
    class TransientCommandPool {
        + VkCommandPool
    }

    class RenderPass {
        + VkRenderPass
    }

    class GraphicPipeline {
        + VkPipeline
        + VkPipelineLayout
    }

    class GraphicQueue {
        + VkQueue
    }
    class PresentQueue {
        + VkQueue
    }
}

GraphicEngine o-- Instance
GraphicEngine o-- GraphicDevice
GraphicEngine o-- DebugTool

GraphicDevice o-- PhysicalDevice
GraphicDevice o-- LogicalDevice
GraphicDevice o-- QueueFamilies
GraphicDevice o-- GraphicRender

GraphicDevice -> ISurfaceHolder

GraphicRender o-- RenderPass
GraphicRender o-- GraphicPipeline
GraphicRender o-- BufferMemoryArea

BufferMemoryArea o-- DescriptorPool
BufferMemoryArea o-- CommandPool
BufferMemoryArea o-- TransientCommandPool

GraphicRender -> IImageDrawTarget

QueueFamilies o-- GraphicQueue
QueueFamilies o-- PresentQueue

package window {
    class Window {
        + waitEvent()
        + isMinimization() -> bool
        + getCurrentFrameSize()
    }

    class Surface {
    }

    class SwapChain {
    }

    class WindowHandler {
        - GLFWwindow
    }

    class SurfaceHandler {
        + VkSurfaceKHR
    }

    class SwapChainHandler {
        + VkSwapchainKHR
    }
}

Window o-- Surface
Surface o-- SwapChain

Window o-- WindowHandler
Surface o-- SurfaceHandler
SwapChain o-- SwapChainHandler

Surface .|> ISurfaceHolder
SwapChain .|> IImageDrawTarget

@enduml